2014-02-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network (open_sock_tcp): Adequately print target host address
	when in time-out case.

2014-02-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_socket.c (rm_udp_data): Check hash table pointer is valid
	before removing it.

2014-02-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (port_in_port_ranges): New function.

	* base/openvas_networking.h: Add function prototype accordingly.

	* misc/plugutils.c (port_in_ports, unscanned_udp_ports_as_closed):
	Remove functions as unused anymore.
	(unscanned_ports_as_closed): Add argument for port protocol.
	(kb_get_port_state_proto): Use port_range_ranges and
	port_in_port_ranges before trying to determine port state. Fix usage of
	unscanned_port_as_closed. Style update.

	* misc/plugutils.h: Add base/openvas_networking.h include.

2014-02-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/openvas_networking.c (validate_port_range): Fix typo in
	comment.

2014-02-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (port_range_ranges): New function from
	Manager.

	* base/openvas_networking.h: Add includes and function prototypes
	accordingly.
	(struct range): New struct.
	(port_protocol_t): New enum.

2014-02-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (validate_port_range): New function.

	* base/openvas_networking.h: Add validate_port_range prototype.

2014-02-04  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl_grammar.y: Updated to ensure compatibility with bison >=
	3.0. Patch provided by Dan Fandrich.

2014-01-31  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (open_sock_tcp): Don't silently stop trying to open
	sockets for a tcp port when a previous test failed. Add log message upon
	failure.

2014-01-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
